--- a/testClient/list.html
+++ b/testClient/list.html
@@ -10,7 +10,7 @@
     <button id="create">create</button>
     <div>
         <ul id="container">
-            
+            <li>loading...</li>
         </ul>
     </div>
     
