--- a/testClient/tab.html
+++ b/testClient/tab.html
@@ -9,6 +9,12 @@
         .seats {
             width: 15%;
         }
+        .will{
+            background-color:#e58e8e;
+        }
+        .nowTurn{
+            background-color:#00ff00;
+        }
     </style>
 </head>
     <body>
@@ -29,7 +35,7 @@
             </ul>
         </div>
         
-        <div>
+        <div style="display:none">
             <ul>
                 <li><a href="">1</a></li>
                 <li><a href="">1</a></li>
