--- a/testClient/tab.html
+++ b/testClient/tab.html
@@ -70,7 +70,9 @@
 <body>
 
     <div class="row">
-        <ul class="col-xs-12 seats" id="seats"></ul>
+        <ul class="col-xs-12 seats" id="seats">
+            <li>loading...</li>
+        </ul>
     </div>
     <div class="row nowcards">
         <ul id="last" class="col-xs-12"></ul>
@@ -97,8 +99,8 @@
 
     <script src="Scripts/jquery-2.1.1.js"></script>
     <script src="Scripts/bootstrap.js"></script>
-    <script src="http://localhost:1234/scripts/jquery.signalR-2.1.0.js"></script>
-    <script src="http://localhost:1234/signalr/hubs"></script>
+    <script src="http://localhost:1432/scripts/jquery.signalR-2.1.0.js"></script>
+    <script src="http://localhost:1432/signalr/hubs"></script>
     <script src="app/app.js"></script>
     <script src="app/tab.js"></script>
 </body>
