--- a/testClient/login.html
+++ b/testClient/login.html
@@ -13,17 +13,17 @@
         </div>
         <div>
             <ul class="nav nav-tabs">
-                <li><a href="#login" data-toggle="tab">Login</a></li>
+                <li><a href="#loginf" data-toggle="tab">Login</a></li>
                 <li><a href="#register" data-toggle="tab">Register</a></li>
             </ul>
 
             <!-- Tab panes -->
             <div class="tab-content">
-                <div class="tab-pane active" id="login">
+                <div class="tab-pane active" id="loginf">
                     <div>
                         login
-                        <input id="loginName" />
-                        <input id="loginPass" />
+                        <input id="loginName" /><br />
+                        <input id="loginPass" /><br />
                         <button id="login">go</button>
                     </div>
                 </div>
