--- a/testClient/b.html
+++ b/testClient/b.html
@@ -50,6 +50,10 @@
             border: 1px solid blue;
         }
 
+        .choose {
+            background-color: rgb(174, 245, 174);
+        }
+
         .card {
             width: 80px;
             height: 120px;
@@ -95,26 +99,29 @@
 <body ng-controller="body">
     <div class="players">
         <ul>
-            <li ng-repeat="item in data.seats" id="{{item.UserId}}">{{item.UserName}}</li>
+            <li ng-repeat="item in data.seats" id="{{item.UserId}}">
+                {{item.UserName}}
+                <span>{{item.IsOk}}</span>
+            </li>
         </ul>
     </div>
     <div class="pushes">
         <div class="card" ng-repeat="item in data.lastPush" v="{{item.Value}}">{{item.Text}}</div>
     </div>
     <div class="inhand">
-        <div class="card1" ng-repeat="item in data.you.inHand" v="{{item.Value}}">{{item.Text}}</div>
+        <div class="card1" ng-repeat="item in data.you.inHand" v="{{item.Value}}" onclick="tg(this)">{{item.Text}}</div>
     </div>
     <div class="options">
         <script>
             document.write("w:" + window.screen.width + ",h:" + window.screen.height);
         </script>
         <div ng-if="data.gameState==0">
-            <button ng-if="data.you.ready==false">ready</button>
+            <button ng-if="data.you.ready==false" ng-click="ready()">ready</button>
             <button ng-if="data.you.ready==true">wait</button>
         </div>
         <div ng-if="data.gameState==1">
             <div ng-if="data.you.inturn==true">
-                <button>push</button>
+                <button ng-click="push()">push</button>
                 <button>pass</button>
             </div>
             <div ng-if="data.you.inturn==false">
@@ -137,7 +144,8 @@
         };
         var game = {
             uid: "",
-            tabid:"",
+            tabid: "",
+            owner:"",
             seats: [],
             you: {
                 inHand: [],
@@ -162,10 +170,19 @@
             }
             game.uid = uid;
             game.tabid = tabid;
-            connectToServer($scope);
+            var proxy=connectToServer($scope);
             $scope.update = function (data) {
                 $scope.data = data;
                 $scope.$apply();
+            };
+
+            $scope.ready = function() {
+                proxy.server.ready(tabid,uid);
+            };
+
+            $scope.push = function() {
+                var cards = $(".inhand .choose");
+                console.log(cards);
             };
         });
 
@@ -177,10 +194,10 @@
             ele.scope().update(data);
         }
         function connectToServer($scope) {
-            var url = "http://192.168.1.103:1432/";
+            var url = "http://localhost:1432/";
             $.connection.hub.qs = { "tab": game.tabid, "uid": game.uid };
 
-            app.proxy = $.connection.tabHub;
+            var proxy = $.connection.tabHub;
             $.connection.hub.error(function (error) {
                 console.log('SignalR error: ' + error);
             });
@@ -189,6 +206,8 @@
             var client = $.connection.tabHub.client;
             setClientFunc(client,$scope);
             $.connection.hub.start();
+
+            return proxy;
         }
 
         function setClientFunc(client, $scope) {
@@ -218,6 +237,8 @@
             game.lastPush = tab.LastHand;
             game.gameState = tab.State;
             game.lastBigUser = tab.BigUser;
+            game.nowSpeaker = tab.WaitUser;
+            game.owner = tab.OwnerId;
         }
 
         function fillUser(users) {
@@ -225,7 +246,16 @@
         }
 
         function fillyou(you) {
-            game.you = you;
+            console.log(you);
+            game.you.inHand = you.InHand;
+            game.you.ready = you.Ready;
+            game.you.inturn = you.Turn;
+        }
+        function tg(item) {
+            if (game.you.inturn) {
+                console.log(item);
+                $(item).toggleClass("choose");
+            }
         }
 
     </script>
